# caviar

./: .deepsource.toml  .gitignore  LICENSE  README.md  deno.json  deps.ts  generate_version.ts  mod.ts  test.ts
.github/workflows/: deploy.yml
assets/: godot.json  klutzy.json  pixi.json
cli/: README.md  caviar.ts  commands.ts  version.ts
cli/example/: main.ts
cli/structs/: Scene.ts  World.ts  html.ts
deno_gl/: LICENSE  README.md  mod.ts
deno_gl/examples/: babylon.js  test.ts  test2.js  three.js
deno_gl/tools/: cts_runner.ts
docs/: README.md  client_deps.ts  deno.json  fresh.gen.ts  import_map.json  main.ts  pyro.yml  server_deps.ts  tw_config.ts
docs/components/: Examplesbar.tsx  Header.tsx  Nav.tsx  SideBar.tsx  Sidebar.tsx
docs/data/: docs.ts  examples.ts
docs/docs/: toc.json
docs/examples/: toc.json
docs/islands/: Example.tsx
docs/pages/: index.md
docs/routes/: [name].tsx  index.tsx  (+2 more)
examples/: Circle.ts  animation.ts  atlas.ts  button.ts  frame.ts  godot.ts  image.ts  movingsquare.ts  onclick.ts  particle.ts  perlin.ts  physics.ts  pixeltexture.ts  polygon.ts  sprite.ts  test.ts  texturesprite.ts  transparent_window.ts
sdl/: .rustfmt.toml  Cargo.toml  LICENSE  README.md  mod.ts
sdl/bindings/: bindings.ts
sdl/lib/: canvas.ts  pixel.ts  texture.ts
sdl/src/: events.rs  fonts.rs  lib.rs  shapes.rs  tasks.rs  update.rs
src/: PhysicsWorld.ts  Plugin.ts  Renderer.ts  World.ts  types.ts  version.ts
web/: .gitignore  README.md  build.ts  deno.json  mod.ts  package.json  rollup.build.ts  rollup.config.ts  rollup.watch.ts  tsconfig.json
(+196 files in other folders)
